@@ -109,6 +109,7 @@
      * Added api/v1/<storage>/<path> delete endpoint
      * Fixed a semicolon in a filename being printed breaking everything
      * Fixed a bronken RESET_PRINTER for raspis connected through USB
+     * API key option removed from wizard
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
